--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -59,3 +59,13 @@
     transition: 0.3s ease-in-out;
 }
 
+.message-Modal {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: red;
+    padding: 20px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+}
