Added game-play buttons

--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -82,3 +82,11 @@
         opacity: 0.2;
     }
 }
+
+.nav-top {
+    position: absolute;
+    top: 10px;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+}
