--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -77,10 +77,12 @@
     &-2 {
         right: 20px;
     }
+}
 
-    &.disabled {
-        opacity: 0.2;
-    }
+.disabled {
+    opacity: 0.2;
+    pointer-events: none;
+    cursor: not-allowed;
 }
 
 .nav-top {
