--- a/src/styles/game_board.scss
+++ b/src/styles/game_board.scss
@@ -5,6 +5,8 @@
     overflow: hidden;
     margin: auto;
     margin-top: 50px;
+    background: linear-gradient(225deg, #1b1b1b, #212121);
+    box-shadow: -35px 35px 70px #111111, 35px -35px 70px #2d2d2d;
 
     &:after,
     &:before {
