--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -55,11 +55,25 @@
 }
 
 .message-Modal {
-    background: red;
+    border-radius: 20px;
+    background: $bg-color;
+    box-shadow:  -23px 23px 48px #111111,
+             23px -23px 48px #2d2d2d;
     padding: 20px;
-    color: #fff;
     font-size: 20px;
     font-weight: bold;
+    color: #b1b1b1;
+    box-shadow: inset -1px -1px 3px rgba(255,255,255,0.1),
+            inset 2px 2px 6px rgba(0,0,0,0.8);
+
+    h1,h2,h3 {
+        margin: 0;
+    }
+}
+
+.board-heading {
+    font-family: 'Bungee Outline', cursive;
+    margin-bottom: 15px !important;
 }
 
 .dead-player {
@@ -68,27 +82,148 @@
 
 .side-modal {
     position: absolute;
-    top: 20px;
+    top: 50px;
 
     &-1 {
-        left: 20px;
+        left: 40px;
     }
 
     &-2 {
-        right: 20px;
+        right: 40px;
     }
 }
 
 .disabled {
-    opacity: 0.2;
+    // opacity: 0.2;
     pointer-events: none;
     cursor: not-allowed;
 }
 
 .nav-top {
     position: absolute;
-    top: 10px;
-    margin: auto;
-    width: 100%;
+    width: calc(100% - 80px);
     text-align: center;
+    bottom: 20px;
+    left: 40px;
+    border-radius: 10px;
+    padding: 20px;
+    background: linear-gradient(225deg, #212121, #1c1c1c);
+    box-shadow:  -23px 23px 48px #111111,
+             23px -23px 48px #2d2d2d;
+    box-shadow: inset -1px -1px 3px rgba(255,255,255,0.1),
+                inset 2px 2px 6px rgba(0,0,0,0.8);
+}
+
+.game-timer {
+    font-size: 50px;
+    font-weight: 900;
+    margin-top: 10px;
+}
+
+.board-player {
+    box-shadow: -1px -1px 3px rgba(255,255,255,0.1),
+                2px 2px 6px rgba(0,0,0,0.8);
+
+    &:hover {
+        box-shadow: inset -1px -1px 3px rgba(255,255,255,0.1),
+                    inset 2px 2px 6px rgba(0,0,0,0.8);
+    }
+}
+
+.btn-neon {
+    position: relative;
+    display: inline-block;
+    padding: 10px 30px;
+    padding-top: 13px;
+    text-transform: uppercase;
+    color: #2894ff;
+    background-color: #262c37;
+    font-size: 16px;
+    letter-spacing: 2px;
+    transition: 0.5s;
+    border: none;
+    cursor: pointer;
+    margin-right: 20px;
+    font-weight: 700;
+
+    span {
+        position: absolute;
+        display: block;
+        background-color: #2894ff;
+        
+        &:nth-child(1) {
+            left: 0;
+            bottom: 0;
+            width: 1px;
+            height: 100%;
+            transform: scaleY(0);
+            transform-origin: top;
+            transition: transform 0.25s;
+        }
+
+        &:nth-child(2) {
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 1px;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.25s;
+            transition-delay: 0.25s;
+        }
+
+        &:nth-child(3) {
+            right: 0;
+            bottom: 0;
+            width: 1px;
+            height: 100%;
+            transform: scaleY(0);
+            transform-origin: bottom;
+            transition: transform 0.25s;
+            transition-delay: 0.5s;
+        }
+
+        &:nth-child(4) {
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 1px;
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.25s;
+            transition-delay: 0.75s;
+        }
+    }
+
+    &:hover {
+        background-color: #2894ff;
+        color: #262c37;
+        transition-delay: 1s;
+
+        span {
+            &:nth-child(1) {
+                transform: scaleY(1);
+                transform-origin: bottom;
+            }
+
+            &:nth-child(2) {
+                transform: scaleX(1);
+                transform-origin: left;
+            }
+
+            &:nth-child(3) {
+                transform: scaleY(1);
+                transform-origin: top;
+            }
+
+            &:nth-child(4) {
+                transform: scaleX(1);
+                transform-origin: right;
+            }
+        }
+    }
+}
+
+.mr-0 {
+    margin-right: 0 !important;
 }
