--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
 $board-size: 570;
-$board-border-color: #000;
-$piece-size: 24;
+$board-border-color: rgba(#2894ff,0.4);
+$piece-size: 20;
 $bg-color: #1f1f1f;
