--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -12,8 +12,6 @@
     }
 
     &-1 {
-        $player-color: #f85f54;
-
         background-color: rgba($player-color,1);
         box-shadow: 0 0 20px rgba($player-color,1),
                     0 0 40px rgba($player-color,1),
@@ -31,8 +29,6 @@
     }
 
     &-2 {
-        $player-color2: #05e9ca;
-
         background-color: rgba($player-color2,1);
         box-shadow: 0 0 20px rgba($player-color2,1),
                     0 0 40px rgba($player-color2,1),
@@ -134,10 +130,16 @@
 
 .nav-top {
     position: absolute;
-    width: calc(100% - 80px);
-    text-align: center;
-    bottom: 20px;
-    left: 40px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: 0.3s ease-in-out;
+    background: #131212;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .game-timer {
@@ -160,6 +162,7 @@
     position: relative;
     display: inline-block;
     padding: 8px 24px;
+    padding-top: 11px;
     text-transform: uppercase;
     color: #2894ff;
     background-color: #262c37;
@@ -268,94 +271,203 @@
     min-width: 115px;
 }
 
-.game-btns-view {
-    .btn:not(.btn-game-start) {
-        display: none;
-    }
-}
-
-.hide-start-btn {
-    .btn-game-start {
-        display: none;
-    }
-}
-
-.cube {
-    transition: all 250ms ease;
-    transform-style: preserve-3d;
-}
-
-.default-state,
-.active-state,
-.cube {
-    height: 60px;
-}
-
-.flip-to-top .active-state {
-    transform: rotateX(90deg) translateZ(150px);
-}
-
-.error-msg {
-    transform: rotateX(-89deg);
-
-    .default-state {
-        transform: translateZ(50px);
-        background: linear-gradient(225deg, #212121, #1c1c1c);
-        box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.1), inset 2px 2px 6px rgba(0, 0, 0, 0.8);
-    }
-}
-
-.default-state,
-.active-state {
-    background: linear-gradient(225deg, #212121, #1c1c1c);
-    box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.1), inset 2px 2px 6px rgba(0, 0, 0, 0.8);
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.active-state {
-    background: linear-gradient(225deg, #212121, #1c1c1c);
-    font-size: 30px;
-    font-weight: 600;
-    color: #05e9ca;
-
-    &-border {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        animation: intermittente 0.01s infinite alternate;
-        border: 1px solid #cb3535;
-        box-shadow: 0px 0px 55px rgba(204, 0, 0, 0.3), 
-                    0 0 31px rgba(204, 0, 0, 0.3), 0 0 2px rgba(255, 0, 0, 0.3), 
-                    0 0 21px rgba(204, 0, 0, 0.3), 0 0px 17px rgba(204, 0, 0, 0.3), 
-                    inset 0px 0 17px rgba(204, 0, 0, 0.3), 
-                    inset 0px 0 30px rgba(204, 0, 0, 0.3); 
-        
-        }
-}
-
-@keyframes intermittente {
-    75% {
-        opacity: 0.7;
-    }
-}
-
 .close-icon {
     width: 20px;
     height: 20px;
     position: relative;
-    top: -7px;
 
     &-outer {
         position: absolute;
         right: 20px;
-        top: 20px;
+        top: 12px;
         width: 20px;
         height: 20px;
         cursor: pointer;
         background: transparent;
         border: none;
     }
+
+    g {
+        fill: #fff;
+    }
+}
+
+.menu-toggle {
+    position: absolute;
+    bottom: 30px;
+    right: 40px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background: linear-gradient(315deg, #212121, #1c1c1c);
+    box-shadow:  -18px -18px 36px #151515,
+                18px 18px 36px #292929;
+    
+    &-right {
+        right: auto;
+        left: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+}
+
+.navToggle {
+  position: absolute;
+  width: 30px;
+  height: 60px;
+  top: 7px;
+  left: 20px;
+  transition-duration: 0.5s;
+}
+.navToggle:hover {
+  cursor: pointer;
+}
+.navToggle .icon-left {
+  transition-duration: 0.5s;
+  position: absolute;
+  height: 4px;
+  top: 25px;
+  width: 15px;
+  background-color: $menu-color;
+}
+.navToggle .icon-left:before {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 15px;
+  height: 4px;
+  background-color: $menu-color;
+  content: "";
+  top: -10px;
+}
+.navToggle .icon-left:after {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 15px;
+  height: 4px;
+  background-color: $menu-color;
+  content: "";
+  top: 10px;
+}
+.navToggle .icon-right {
+  transition-duration: 0.5s;
+  position: absolute;
+  height: 4px;
+  top: 25px;
+  width: 15px;
+  background-color: $menu-color;
+  left: 15px;
+}
+.navToggle .icon-right:before {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 15px;
+  height: 4px;
+  background-color: $menu-color;
+  content: "";
+  top: -10px;
+}
+.navToggle .icon-right:after {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 15px;
+  height: 4px;
+  background-color: $menu-color;
+  content: "";
+  top: 10px;
+}
+.navToggle.open .icon-left {
+  transition-duration: 0.5s;
+  background: transparent;
+}
+.navToggle.open .icon-left:before {
+  transform: rotateZ(45deg) scaleX(1.4) translate(2px, 2px);
+}
+.navToggle.open .icon-left:after {
+  transform: rotateZ(-45deg) scaleX(1.4) translate(2px, -2px);
+}
+.navToggle.open .icon-right {
+  transition-duration: 0.5s;
+  background: transparent;
+}
+.navToggle.open .icon-right:before {
+  transform: rotateZ(-45deg) scaleX(1.4) translate(-2px, 2px);
+}
+.navToggle.open .icon-right:after {
+  transform: rotateZ(45deg) scaleX(1.4) translate(-2px, -2px);
+}
+
+#root {
+    transition: 0.3s ease-in-out;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+
+    &.show-menus {
+        height: calc(100vh + 60px);
+        margin-top: -60px; 
+        
+        .nav-top {
+            transform: translateY(0);
+        }
+    }
+
+    &.show-error {
+        height: calc(100vh - 44px);
+        margin-top: 44px;
+        
+        .error-msg {
+            transform: translateY(0);
+        }
+    }
+}
+
+.start-icon {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: -2px;
+}
+
+.change-icon {
+    width: 40px;
+    height: auto;
+    transition: 0.3s ease-in-out;
+
+    path {
+        transition: 0.3s ease-in-out;
+    }
+
+    &-1 {
+        transform: rotate(180deg);
+        path {
+            fill: $player-color;
+        }
+    }
+
+    &-2 {
+        path {
+            fill: $player-color2;
+        }
+    }
+}
+
+.error-msg {
+    position: fixed;
+    top: 0;
+    transition: 0.3s ease-in-out;
+    background-color: #f85f54;
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-100%);
+    overflow: hidden;
+
 }
