--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -51,6 +51,40 @@
         border: 1px solid $board-border-color;
         background: $bg-color;
     }
+
+    &-win {
+        .message-Modal {
+            min-height: 201px;
+            color: #333333;
+        }
+
+        h2,h3,.game-timer {
+            display: none;
+        }
+
+        .board-heading {
+            &:not(.board-heading-win) {
+                transform: translateY(40px);
+            }
+
+            &-win {
+                opacity: 1;
+                transform: translateY(-80px);
+            }
+        }
+
+        &-1 {
+            .message-Modal {
+                background-color: $player-color;
+            }
+        }
+
+        &-2 {
+            .message-Modal {
+                background-color: $player-color2;
+            }
+        }
+    }
 }
 
 .piece-modal {
@@ -89,6 +123,7 @@
     color: #b1b1b1;
     box-shadow: inset -1px -1px 3px rgba(255,255,255,0.1),
             inset 2px 2px 6px rgba(0,0,0,0.8);
+    transition: 0.6s ease-in-out;
 
     h1,h2,h3 {
         margin: 0;
@@ -103,6 +138,13 @@
     font-family: 'Bungee Outline', cursive;
     font-size: 32px;
     margin-bottom: 15px !important;
+    transition: 0.6s ease-in-out;
+
+    &-win {
+        position: absolute;
+        opacity: 0;
+        bottom: -40px;
+    }
 }
 
 .dead-player,
@@ -403,6 +445,8 @@
     height: 100vh;
     overflow: hidden;
     position: relative;
+    max-width: 1299px;
+    margin: 0 auto;
 
     &.show-menus {
         height: calc(100vh + 60px);
