--- a/src/styles/pieces.scss
+++ b/src/styles/pieces.scss
@@ -341,14 +341,22 @@
     background: linear-gradient(315deg, #212121, #1c1c1c);
     box-shadow:  -18px -18px 36px #151515,
                 18px 18px 36px #292929;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
     
     &-right {
         right: auto;
         left: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
+    }
+
+    &-up {
+        top: 100px;
+
+        @media (min-width: 1025px) {
+            display: none;
+        }
     }
 }
 
@@ -449,9 +457,10 @@
     justify-content: center;
 
     &.show-menus {
-        height: calc(100vh + 60px);
-        margin-top: -60px; 
-        
+        @media (min-width: 1025px) {
+            height: calc(100vh + 60px);
+            margin-top: -60px; 
+        }
         .nav-top {
             transform: translateY(0);
         }
@@ -543,6 +552,12 @@
 
     .board-heading {
         margin-bottom: 0 !important;
+
+        &-win {
+            bottom: auto;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 
     .game-timer {
@@ -560,5 +575,181 @@
         .game-timer {
             top: -70px;
         }
+    }
+
+    .menu-toggle {
+        bottom: 100px;
+        box-shadow: -5px -11px 36px #151515, -18px -19px 36px #1f1e1e;
+    }
+
+    .nav-top {
+        top: 0;
+        z-index: 100;
+        height: 100%;
+        width: calc(100% - 150px);
+        flex-direction: column;
+        justify-content: flex-start;
+        transform: translateX(-100%);
+        padding: 40px 0;
+        backdrop-filter: blur(10px);
+        background: rgba(19, 18, 18, 0.7);
+
+        .btn {
+            margin-right: 0;
+            width: 100%;
+            font-size: 24px;
+            text-align: left;
+            padding: 30px 40px;
+            background: transparent;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        }
+    }
+
+    .player-win {
+        .message-Modal {
+            min-height: auto;
+        }
+
+        h2,h3{
+            display: block;
+            opacity: 0;
+        }
+        .board-heading:not(.board-heading-win) {
+            transform: translateX(-50px);
+        }
+
+        .board-heading-win {
+            transform: translateX(20px);
+        }
+    }
+}
+
+@media (max-height: 768px) {
+    $board-size: 450;  
+
+    .game-board {
+        width: rem-calc($board-size);
+        height: rem-calc($board-size);
+
+        &:after,
+        &:before {
+            box-shadow: rem-calc(-($board-size/4)) 0px $board-border-color, 
+                        rem-calc($board-size/4) 0px $board-border-color;
+        }
+
+        &-outer {
+            width: rem-calc($board-size);
+            height: rem-calc($board-size);
+
+            &:before {
+                width: rem-calc(sqrt(($board-size * $board-size) + ($board-size * $board-size) - 4));
+                box-shadow: 0px -#{rem-calc(sqrt((($board-size/4)*($board-size/4)) * 2))} $board-border-color, 0px rem-calc(sqrt((($board-size/4)*($board-size/4)) * 2)) $board-border-color;
+            }
+        }
+    }
+
+    .player {
+        margin-bottom: rem-calc($board-size / 4 - $piece-size);
+        margin-right: rem-calc(($board-size / 4) - $piece-size);
+    }
+    .piece-modal {
+        &-outer {
+            width: rem-calc($board-size + $piece-size);
+            height: rem-calc($board-size + $piece-size);
+        }
+    }
+}
+
+@media (max-width: 560px) {
+    $board-size: 320;  
+
+    .game-board {
+        width: rem-calc($board-size);
+        height: rem-calc($board-size);
+
+        &:after,
+        &:before {
+            box-shadow: rem-calc(-($board-size/4)) 0px $board-border-color, 
+                        rem-calc($board-size/4) 0px $board-border-color;
+        }
+
+        &-outer {
+            width: rem-calc($board-size);
+            height: rem-calc($board-size);
+
+            &:before {
+                width: rem-calc(sqrt(($board-size * $board-size) + ($board-size * $board-size) - 4));
+                box-shadow: 0px -#{rem-calc(sqrt((($board-size/4)*($board-size/4)) * 2))} $board-border-color, 0px rem-calc(sqrt((($board-size/4)*($board-size/4)) * 2)) $board-border-color;
+            }
+        }
+    }
+
+    .player {
+        margin-bottom: rem-calc($board-size / 4 - $piece-size);
+        margin-right: rem-calc(($board-size / 4) - $piece-size);
+    }
+    .piece-modal {
+        &-outer {
+            width: rem-calc($board-size + $piece-size);
+            height: rem-calc($board-size + $piece-size);
+        }
+    }
+
+    .message-Modal {
+        .board-heading {
+            font-size: 24px;
+        }
+
+        h2,h3 {
+            font-size: 18px;
+        }
+    }
+
+    .game-timer {
+        font-size: 28px;
+        top: 60px
+    }
+
+    .side-modal-2 {
+        .game-timer {
+            top: -50px;
+        }
+    }  
+
+    .menu-toggle {
+        transform: scale(0.7);
+        bottom: 60px;
+        right: 10px;
+
+        &-right {
+            left: 10px;
+        }
+
+        &-up {
+            top: 70px;
+        }
+    }
+
+    .nav-top {
+        width: calc(100% - 80px);
+
+        .btn {
+            font-size: 20px;
+            padding: 20px 30px;
+        }
+    }
+
+    .error-msg {
+        font-size: 18px;
+    }
+
+    #root.show-error {
+        height: calc(100vh - 38px);
+        margin-top: 38px;
+    }
+
+    .player-1,
+    .player-2 {
+        box-shadow: none;
     }
 }
